--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-fastapi==0.123.10
-uvicorn==0.22.0
-python-multipart==0.0.20
-ifcopenshell==0.8.4
+fastapi>=0.115.0
+uvicorn>=0.30.0
+python-multipart>=0.0.20
+ifcopenshell==0.8.5
+pydantic>=2.8.0
+annotated-types>=0.6.0
+starlette>=0.37.2
