--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,23 @@
-fastapi>=0.115.0
-uvicorn>=0.30.0
-python-multipart>=0.0.20
-ifcopenshell==0.8.5
-pydantic>=2.8.0
-annotated-types>=0.6.0
-starlette>=0.37.2
+fastapi==0.123.10
+uvicorn==0.22.0
+ifcopenshell==0.8.4
+python-multipart==0.0.20
+gunicorn==21.2.0
+numpy==2.3.5
+shapely==2.1.2
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.0
+click==8.3.1
+colorama==0.4.6
+h11==0.16.0
+idna==3.11
+isodate==0.7.2
+lark==1.3.1
+pydantic==2.12.5
+pydantic_core==2.41.5
+python-dateutil==2.9.0
+six==1.17.0
+starlette==0.50.0
+typing_extensions==4.15.0
+typing-inspection==0.4.2
